--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,11 +11,13 @@
   <ul id="messages" >
 
   </ul>
+  <label>Message</label>
   <form action="" id="form-message">
     <input id="messageInput" autocomplete="off" data-testid="message-box"/>
     <button data-testid="send-button">enviar</button>
   </form>
 
+  <label>Nickname</label>
   <form action="" id="form-nickname">
     <input id="nicknameInput" autocomplete="off" data-testid="nickname-box"/>
     <button data-testid="nickname-button" >enviar</button>
